[package]
name = "stun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
tokio = { workspace = true }
thiserror = "1.0.58"
futures-util = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "io"] }
log = { workspace = true, features = [] }
packed_struct = "0.10.1"
[dev-dependencies]
env_logger = "0.10.0"